samples/_failures_safe/1761800627_8714f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6890cde.c: In function ‘main’:
./samples/SAFE/__tmp_c6890cde.c:135:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  135 |     double cpu_time
      |     ^~~~~~
./samples/SAFE/__tmp_c6890cde.c:135:5: error: expected declaration or statement at end of input
